db2fce News - History of user-visible changes
Copyright (C) 2015 credativ GmbH

Version 0.0.8 - Development

Version 0.0.7 - 2016-05-09

* Added update scripts through 0.0.4

Version 0.0.6 - 2016-02-24

* Added lcase() function

Version 0.0.5 - 2015-10-27

* Added testsuite

Version 0.0.4 - 2015-07-09

* Added !! operator alias for ||
* Added translate() function
* Added hex() function
* Added double() function
* Added months_between() function
* Added microsecond(), second(), minute() and hour() functions

Version 0.0.3 - 2015-04-28

* Removed ^= operator alias for pg_lsn and jsonb datatypes for backward
  compatibility

Version 0.0.2 - 2015-04-27

* Corrected schema usage privileges

Version 0.0.1 - 2015-04-27

* Initial version